# ray-tracing

./: Cargo.toml
src/: camera.rs  gpu.rs  main.rs  material.rs  object.rs  picture.rs  ray.rs  render.rs  shader.wgsl
