[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13"
bytemuck_derive = "1.4"
env_logger = "0.10"
float-ord = "0.3"
log = "0.4"
nalgebra = { version = "0.32", features = ["bytemuck"] }
rand = "0.8"
raw-window-handle = "0.5"
rayon = "1.7"
smol = "1.3"
winit = "0.28"
wgpu = "0.16"
